namespace Domain.Entities
{
    public class BetStatus
    {
        public int Id { get; set; }
        public string Name { get; set; } = string.Empty;
    }
}
