Table Player {
  Id UUID [pk]
  Name varchar(100)
  Email varchar(255) [unique, not null]
  PasswordHash varchar(255) [not null]
  CreatedAt datetime [not null]
}

Table Currency {
  Id int [pk]
  Code varchar(10) [not null]
  Name varchar(50) [not null]
}

Table Bet {
  Id UUID [pk]
  GameId UUID [ref: > Game.Id]
  WalletId UUID [ref: > Wallet.Id]
  Amount decimal(18,2) [not null]
  Payout decimal(18,2)
  CreatedAt datetime [not null]
  Note varchar(255)
  LastUpdatedAt datetime
  IsWon boolean [not null, default: false]
  StatusId int [ref: > BetStatus.Id]
}

Table WalletTransaction {
  Id UUID [pk]
  ParentWalletTransactionCheckpointId UUID [ref: - WalletTransaction.Id]
  BetId UUID [ref: > Bet.Id]
  WalletId UUID [ref: > Wallet.Id]
  TransactionTypeId int [ref: > TransactionType.Id]
  Amount decimal(18,2) [not null]
  CreatedAt datetime [not null]
}

Table BetStatus {
  Id int [pk]
  Name varchar(20) [not null]
}

Table TransactionType {
  Id int [pk]
  Name varchar(20) [not null]
}

Table Wallet {
  Id UUID [pk]
  CurrencyId int [ref: > Currency.Id]
  PlayerId UUID [ref: > Player.Id]
  Balance decimal(18,2) [not null, default: 0.00]
  CreatedAt datetime [not null]
}

Table Game {
  Id UUID [pk]
  Name varchar(100) [not null]
  Description varchar(255)
  MinimalBetAmount decimal(18,2) [not null, default: 0.00]
  MinimalBetCurrencyId int [ref: > Currency.Id, not null]
  CancelTaxPercentage decimal(5,2) [not null, default: 0.00]
  CreatedAt datetime [not null]
  ConsecutiveLossBonusThreshold int [default: null]
  Odds decimal(18,2) [not null, default: 1.00]
}
